--- a/model_cnn.ipynb
+++ b/model_cnn.ipynb
@@ -70,14 +70,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "93ba1a40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/kaggle/input/chest-xray-pneumonia/chest_xray\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "base_dir = os.path.join(path, \"chest_xray\")\n",
-    "os.listdir(base_dir)\n",
+    "print(base_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d031d988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "train_dir = os.path.join(base_dir, \"train\")\n",
     "val_dir   = os.path.join(base_dir, \"val\")\n",
@@ -86,7 +103,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "10aa98b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dataset Path: /kaggle/input/chest-xray-pneumonia/chest_xray/train\n",
+      "----------------------------------------\n",
+      "PNEUMONIA -> 3875 images\n",
+      "NORMAL -> 1341 images\n",
+      "----------------------------------------\n",
+      "Total images: 5216\n",
+      "\n",
+      "Dataset Path: /kaggle/input/chest-xray-pneumonia/chest_xray/val\n",
+      "----------------------------------------\n",
+      "PNEUMONIA -> 8 images\n",
+      "NORMAL -> 8 images\n",
+      "----------------------------------------\n",
+      "Total images: 16\n",
+      "\n",
+      "Dataset Path: /kaggle/input/chest-xray-pneumonia/chest_xray/test\n",
+      "----------------------------------------\n",
+      "PNEUMONIA -> 390 images\n",
+      "NORMAL -> 234 images\n",
+      "----------------------------------------\n",
+      "Total images: 624\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def dataset_details(path):\n",
+    "    print(f\"\\nDataset Path: {path}\")\n",
+    "    print(\"-\" * 40)\n",
+    "    \n",
+    "    total_files = 0\n",
+    "    \n",
+    "    for folder in os.listdir(path):\n",
+    "        folder_path = os.path.join(path, folder)\n",
+    "        \n",
+    "        if os.path.isdir(folder_path):\n",
+    "            files = os.listdir(folder_path)\n",
+    "            num_files = len(files)\n",
+    "            total_files += num_files\n",
+    "            \n",
+    "            print(f\"{folder} -> {num_files} images\")\n",
+    "    \n",
+    "    print(\"-\" * 40)\n",
+    "    print(f\"Total images: {total_files}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "dataset_details(train_dir)\n",
+    "dataset_details(val_dir)\n",
+    "dataset_details(test_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2530f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PNEUMONIA -> (1024, 712)\n",
+      "NORMAL -> (1336, 1128)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "def get_sample_size(path):\n",
+    "    for class_name in os.listdir(path):\n",
+    "        class_path = os.path.join(path, class_name)\n",
+    "        \n",
+    "        if os.path.isdir(class_path):\n",
+    "            first_image = os.listdir(class_path)[0]\n",
+    "            img_path = os.path.join(class_path, first_image)\n",
+    "            \n",
+    "            with Image.open(img_path) as img:\n",
+    "                print(f\"{class_name} -> {img.size}\")  \n",
+    "\n",
+    "get_sample_size(train_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "882055cb",
    "metadata": {},
    "outputs": [
@@ -492,18 +604,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
